# Stalink

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/channel/: AbsMessageSerdes.hpp  IpcChannel.hpp  Messages.hpp  SerdesIpcChannelBase.cpp  SerdesIpcChannelBase.hpp  ShmemSerdesIpcChannel.cpp  ShmemSerdesIpcChannel.hpp  YasMessageSerdes.cpp  YasMessageSerdes.hpp
src/client/: AbsNetlistProcessorBase.cpp  AbsNetlistProcessorBase.hpp  GenericNetlistEntities.hpp  IStaClient.hpp  StaClientBase.cpp  StaClientBase.hpp  StaClientIpcProtocol.cpp  StaClientIpcProtocol.hpp
src/common/: IMessageExecutor.hpp
src/server/: IStaServerHandler.hpp  StaServerIpcProtocol.cpp  StaServerIpcProtocol.hpp
